--- a/app/catalog.html
+++ b/app/catalog.html
@@ -380,7 +380,7 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second product-recommend-item--video">
@@ -449,7 +449,7 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -496,13 +496,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -549,13 +549,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -601,13 +601,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -653,13 +653,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -705,13 +705,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
@@ -757,13 +757,13 @@
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first lazyload"
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/frame-image2.jpg"
-                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/frame-image2@2x.jpg">
                   </div>
                   <div 
                     class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second lazyload" 
                     style="background-image: url('./images/dest/img/thumbnail_catalog.jpeg');"
                     data-bg="./images/dest/img/recommend-img2.jpg"
-                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg 2x">
+                    data-bg-hidpi="./images/dest/img/recommend-img2@2x.jpg">
                   </div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
