--- a/app/catalog.html
+++ b/app/catalog.html
@@ -388,7 +388,8 @@
                       class="product-recommend-item-img-catalog-video lazyload"
                       preload="auto"
                       loop="loop"
-                      muted="muted">
+                      muted="muted"
+                      playsinline>
                       <source type="video/mp4" data-src="./video/productVideo.mp4">
                       Your browser doesn't support HTML5 video tag.
                     </video>
@@ -440,7 +441,8 @@
                       class="product-recommend-item-img-catalog-video lazyload"
                       preload="auto"
                       loop="loop"
-                      muted="muted">
+                      muted="muted"
+                      playsinline>
                       <source type="video/mp4" data-src="./video/productVideo.mp4">
                       Your browser doesn't support HTML5 video tag.
                     </video>
