--- a/app/product.html
+++ b/app/product.html
@@ -177,7 +177,8 @@
                     preload="auto"
                     autoplay="autoplay"
                     loop="loop"
-                    muted="muted">
+                    muted="muted"
+                    playsinline>
                     <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
                   </video>
@@ -188,6 +189,7 @@
                     loop="loop"
                     preload="auto"
                     muted="muted"
+                    playsinline
                     style="display: none;">
                     <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
