--- a/app/basket.html
+++ b/app/basket.html
@@ -118,6 +118,18 @@
 
         <a
           href="#"
+          class="btn btn-lk main-header-btn-lk header-link-item"
+        >
+          <svg class="svg-icon btn-lk-icon">
+            <use
+              xlink:href="./images/sprites/svg/sprite.symbol.svg#lk-icon"
+            ></use>
+          </svg>
+          <span class="visually-hidden">личный кабинет</span>
+        </a>
+
+        <a
+          href="#"
           class="btn btn-basket main-header-btn-basket btn-basket--full header-link-item"
         >
           <svg class="svg-icon btn-basket-icon">
@@ -514,7 +526,7 @@
           />
           <div class="subscribe-nda-text">
             <label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
-              <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
+              <input type="checkbox" class="custom-checkbox" onchange="">
   
               <span class="custom-checkbox-check"></span>
               <span class="custom-checkbox-text custom-checkbox-text--footer">Я соглашаюсь на обработку моих персональных данных
