--- a/app/contacts.html
+++ b/app/contacts.html
@@ -118,6 +118,18 @@
 
         <a
           href="#"
+          class="btn btn-lk main-header-btn-lk header-link-item"
+        >
+          <svg class="svg-icon btn-lk-icon">
+            <use
+              xlink:href="./images/sprites/svg/sprite.symbol.svg#lk-icon"
+            ></use>
+          </svg>
+          <span class="visually-hidden">личный кабинет</span>
+        </a>
+
+        <a
+          href="#"
           class="btn btn-basket main-header-btn-basket btn-basket--full header-link-item"
         >
           <svg class="svg-icon btn-basket-icon">
@@ -162,7 +174,7 @@
               <img src="./images/dest/icons/contacts-icon1.svg" alt="title img">
               <span>Чат</span>
             </h2>
-            <p class="contacts-item-text">Доступны с понедельника  по пятницу с 9:00 до 19:00 по московскому врем.</p>
+            <p class="contacts-item-text">Доступны с понедельника по пятницу с 9:00 до 19:00 по московскому врем.</p>
             <a href="https://api.whatsapp.com/send?phone=79685669977" target="_blank" class="btn btn-primary--thin btn-primary--thin--contacts">Написать</a>
           </div>
         </div>
@@ -173,7 +185,7 @@
               <img src="./images/dest/icons/contacts-icon2.svg" alt="title img">
               <span>Телефон</span>
             </h2>
-            <p class="contacts-item-text">+7 (968) 941 33 77, доступны спонедельника  по пятницу с 9:00 до 19:00 по московскому врем.</p>
+            <p class="contacts-item-text">+7 (968) 941 33 77, доступны спонедельника по пятницу с 9:00 до 19:00 по московскому врем.</p>
             <a href="tel:+79691745777" target="_blank" class="btn btn-primary--thin btn-primary--thin--contacts">Позвонить</a>
           </div>
         </div>
@@ -208,7 +220,7 @@
           />
           <div class="subscribe-nda-text">
             <label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
-              <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
+              <input type="checkbox" class="custom-checkbox" onchange="">
   
               <span class="custom-checkbox-check"></span>
               <span class="custom-checkbox-text custom-checkbox-text--footer">Я соглашаюсь на обработку моих персональных данных
