--- a/app/order.html
+++ b/app/order.html
@@ -118,6 +118,18 @@
 
         <a
           href="#"
+          class="btn btn-lk main-header-btn-lk header-link-item"
+        >
+          <svg class="svg-icon btn-lk-icon">
+            <use
+              xlink:href="./images/sprites/svg/sprite.symbol.svg#lk-icon"
+            ></use>
+          </svg>
+          <span class="visually-hidden">личный кабинет</span>
+        </a>
+        
+        <a
+          href="#"
           class="btn btn-basket main-header-btn-basket btn-basket--full header-link-item"
         >
           <svg class="svg-icon btn-basket-icon">
