--- a/app/product.html
+++ b/app/product.html
@@ -202,6 +202,8 @@
                     preload="auto"
                     muted="muted"
                     playsinline
+                    width = "575"
+                    height= "659"
                     style="display: none;">
                     <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
