--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,40 @@
           <div class="main-header-nav-wrapper" >
           <ul class="main-header-nav-item-wrapper">
             <li class="main-header-nav-item">
-              <a href="#">Каталог</a>
+              <button class="catalog-header-dropdown btn-spoiler-catalog" onclick="spoilerToogle(this)">
+                Каталог
+                <svg class="svg-icon btn-spoiler-catalog-icon">
+                  <use
+                    xlink:href="./images/sprites/svg/sprite.symbol.svg#spoiler-arrow"
+                  ></use>
+                </svg>
+              </button>
+              <ul class="spoiler-content spoiler-content--header">
+                <li>
+                  <a href="#">Посмотреть всё</a>
+                </li>
+                <li>
+                  <a href="#">Option1</a>
+                </li>
+                <li>
+                  <a href="#">Option2</a>
+                </li>
+                <li>
+                  <a href="#">Option3</a>
+                </li>
+                <li>
+                  <a href="#">Option4</a>
+                </li>
+                <li>
+                  <a href="#">Option5</a>
+                </li>
+                <li>
+                  <a href="#">Option6</a>
+                </li>
+                <li>
+                  <a href="#">Option7</a>
+                </li>
+              </ul>
             </li>
             <li class="main-header-nav-item">
               <a href="#">О бренде</a>
@@ -137,6 +170,7 @@
               xlink:href="./images/sprites/svg/sprite.symbol.svg#basket"
             ></use>
           </svg>
+          <span class="btn-basket-counter">3</span>
           <span class="visually-hidden">корзина</span>
         </a>
       </div>
