--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         <nav class="main-header-nav">
           <div class="main-header-nav-wrapper" >
           <ul class="main-header-nav-item-wrapper">
-            <li class="main-header-nav-item">
+            <li class="main-header-nav-item" onmouseenter="onHoverSpoiler()" onmouseleave="onLeaveSpoiler()">
               <button class="catalog-header-dropdown btn-spoiler-catalog" onclick="spoilerToogle(this)">
                 Каталог
                 <svg class="svg-icon btn-spoiler-catalog-icon">
